<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="b89-xG-K8b">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Home-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jGD-zr-Wub">
                                <rect key="frame" x="20" y="64" width="335" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="aUU-eU-gUG"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jh1-jz-yPv">
                                <rect key="frame" x="20" y="118" width="335" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="v7c-dZ-Jj0"/>
                                </constraints>
                                <state key="normal" title="Click"/>
                                <connections>
                                    <action selector="clickAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mGO-sx-uYG"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="Jh1-jz-yPv" firstAttribute="top" secondItem="jGD-zr-Wub" secondAttribute="bottom" constant="20" id="3c1-A9-gRJ"/>
                            <constraint firstItem="Jh1-jz-yPv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6jD-eI-O2D"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jGD-zr-Wub" secondAttribute="trailing" constant="20" id="H1V-NV-0xx"/>
                            <constraint firstItem="jGD-zr-Wub" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="R7Z-cC-WK2"/>
                            <constraint firstItem="jGD-zr-Wub" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="dAx-Wq-o9k"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jh1-jz-yPv" secondAttribute="trailing" constant="20" id="rfu-ae-emc"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="1Kj-O2-boe"/>
                    <connections>
                        <outlet property="textField" destination="jGD-zr-Wub" id="dGG-MC-ml9"/>
                        <segue destination="MMq-jL-uWC" kind="show" identifier="PushToList" id="3UH-GP-dy2"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1071.2" y="99.400299850074973"/>
        </scene>
        <!--List-->
        <scene sceneID="esm-5a-Nma">
            <objects>
                <tableViewController id="MMq-jL-uWC" customClass="TableViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7d2-Fm-efW">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" id="Fwn-W9-DUh">
                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fwn-W9-DUh" id="PO2-MI-bkL">
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <sections/>
                        <connections>
                            <outlet property="dataSource" destination="MMq-jL-uWC" id="kjh-Av-ynS"/>
                            <outlet property="delegate" destination="MMq-jL-uWC" id="7yL-Dt-eyY"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="List" id="LcP-jJ-pWc"/>
                    <connections>
                        <segue destination="qfq-2u-kIE" kind="push" identifier="PushToDetail" id="J4m-IW-0uU"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zn4-Mb-4J7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2009" y="101"/>
        </scene>
        <!--Detail-->
        <scene sceneID="fRS-RW-z12">
            <objects>
                <viewController id="qfq-2u-kIE" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="lNc-YP-6hT">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="2RF-8a-LEa"/>
                    </view>
                    <navigationItem key="navigationItem" title="Detail" id="WQp-Gi-Au6"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1Pf-aW-Kak" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2930" y="100"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="LhQ-3z-pQO">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="b89-xG-K8b" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="c8a-w1-q5b">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="iHU-TC-GE7"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="jT6-tp-bq1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="132" y="99.400299850074973"/>
        </scene>
    </scenes>
</document>
